objects/docebo_v3__CourseEnrollment__c.object
<CustomObject>
    <description>Represents Docebo&apos;s enrollments to courses.</description>
    <fields>
        <fullName>docebo_v3__CompletedLearningObjects__c</fullName>
        <description>The number of completed learning objects by the user for the course.</description>
        <inlineHelpText>The number of completed learning objects by the user for the course.</inlineHelpText>
        <label>CompletedLearningObjects</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>docebo_v3__Completion__c</fullName>
        <description>Completion percentage for a course.</description>
        <label>Completion</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>docebo_v3__Course__c</fullName>
        <description>A Docebo course</description>
        <label>Course</label>
        <referenceTo>docebo_v3__Course__c</referenceTo>
        <relationshipLabel>Course Enrollments</relationshipLabel>
        <relationshipName>CourseEnrollments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>docebo_v3__Credits__c</fullName>
        <label>Credits</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>docebo_v3__DoceboUser__c</fullName>
        <description>A Docebo user</description>
        <label>Docebo User</label>
        <referenceTo>docebo_v3__DoceboUser__c</referenceTo>
        <relationshipLabel>Course Enrollments</relationshipLabel>
        <relationshipName>CourseEnrollments</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>docebo_v3__EnrollmentCompletionDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Completion Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>docebo_v3__EnrollmentStartDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Enrollment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>docebo_v3__EnrolmentId__c</fullName>
        <description>Course enrolment id.</description>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>Enrolment Id</label>
        <length>16</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>docebo_v3__Score__c</fullName>
        <label>Score</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>docebo_v3__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>docebo_v3__Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>docebo_v3__TimeInCourse__c</fullName>
        <label>Time in course</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>docebo_v3__UnenrollmentDate__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>UnenrollmentDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>docebo_v3__Who__c</fullName>
        <description>Salesforce Id to the `who` entity (either user, contact or custom object). This is only used as a technical facilitator.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Who</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Course Enrollment</label>
    <listViews>
        <fullName>docebo_v3__All</fullName>
        <columns>docebo_v3__Course__c</columns>
        <columns>docebo_v3__DoceboUser__c</columns>
        <columns>docebo_v3__Status__c</columns>
        <columns>docebo_v3__Credits__c</columns>
        <columns>docebo_v3__Score__c</columns>
        <columns>docebo_v3__EnrollmentStartDate__c</columns>
        <columns>docebo_v3__EnrollmentCompletionDate__c</columns>
        <columns>docebo_v3__Completion__c</columns>
        <columns>docebo_v3__EnrolmentId__c</columns>
        <columns>docebo_v3__UnenrollmentDate__c</columns>
        <columns>docebo_v3__TimeInCourse__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Course Enrollment Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Course Enrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>